fixed issue with why choose us spacing

--- a/src/components/home/why choose us/WhyChooseUs.module.css
+++ b/src/components/home/why choose us/WhyChooseUs.module.css
@@ -40,6 +40,7 @@
     width: 100%;
     font-weight: 600;
     word-spacing: -5px;
+    gap: 10vw;
 }
 
 .inner-wrapper h2 {
